[tool.poetry]
name = "nautobot-lab-testcontainer"
version = "0.1.0"
description = "Testcontainer Nautobot Lab Module"
authors = ["Jaime Botello <jbotello@gmail.com>"]
readme = "README.md"
packages = [{include = "testcontainers"},]


[tool.poetry.dependencies]
python = "^3.10"
testcontainers = "^4.9.0"
pynautobot = "1.5.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
